--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,2 @@
-# Start by ignoring everything
+# Start by ignoring anything created by running the container - plugins, database and so forth. 
 grafana_data/*
-prometheus_data/*
-
-# We need three pre-canned configuration files:
-# Prometheus: to scrape Push Gateway
-# Grafana: Config.ini (which points to the provisioning / initialization data)
-!prometheus_data/prometheus.yml
-!grafana_data/config.ini
